Normalize on "bike_shops" from "shop" and "for_shops"

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,7 +45,7 @@ en:
     landing_pages_for_community_groups: Bike Index for Community Groups
     landing_pages_for_law_enforcement: Bike Index for Law Enforcement
     landing_pages_for_schools: Bike Index for Schools
-    landing_pages_for_shops: Bike Index for Bike Shops
+    landing_pages_for_bike_shops: Bike Index for Bike Shops
   meta_descriptions:
     welcome_index: "The best bike registry: Simple, secure and free."
     welcome_user_home: "Your bikes on Bike Index"
