Enable updating preferred language via user settings

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,6 @@
+---
 en:
+  language: English
   meta_titles:
     welcome_index: "Bike Index - Bike registration that works"
     welcome_goodbye: "Logged out"
