Externalize welcome#index hero copy

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -140,3 +140,7 @@ en:
           other: "Displaying <b>all %{count}</b> %{entry_name}"
       more_pages:
         display_entries: "Displaying %{entry_name} <b>%{first}&nbsp;-&nbsp;%{last}</b> of <b>%{total}</b> in total"
+
+  welcome:
+    index:
+      hero: Bike registration that works
