--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,7 +11,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    -
+    - 
     - Jan
     - Feb
     - Mar
@@ -37,7 +37,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    -
+    - 
     - January
     - February
     - March
@@ -333,3 +333,10 @@ en:
       add_a_stolen_bike: Add a stolen bike
       add_a_stolenfound_bike: Add a stolen/found bike you've recovered
       register_bike: Register bike
+  landing_pages:
+    for_organizations_photo_list:
+      for: for
+      bike_shops: Bike Shops
+      cities: Cities
+      schools: Schools
+      community_groups: Community Groups
