layouts/email.html.haml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -427,3 +427,8 @@ en:
       sign_up: Sign up
       signup_message: Creating an account here will sign you up for BikeHub
       why_bikeindex: WHY BIKEINDEX?
+    email:
+      bike_index: Bike Index
+      the_bike_index_team: The Bike Index Team
+      help_prevent_theft: Help prevent bike theft,
+      make_a_donation: make a donation.
