--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -440,3 +440,8 @@ en:
       until_every_bike_is_safe: Until Every bike is safe
       be_a_bike_saver: Be a bike saver.
       support_bike_index_today: Support Bike Index today.
+    reg_embed:
+      protect_your_bike_today: Protect your bike today
+      register_your_bike: Register your bike
+      register_on_bike_index: Register on Bike Index.
+      its_free: It's free.
