--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,7 +12,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    - 
+    -
     - Jan
     - Feb
     - Mar
@@ -38,7 +38,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    - 
+    -
     - January
     - February
     - March
@@ -565,3 +565,12 @@ en:
       copyright_html: "%{current_year} &copy; Bike Index, a 501(c)(3) nonprofit - EIN 81-4296194"
     form_well_footer_save:
       save_changes: Save changes
+    header_nav:
+      you: You
+      superuser_home: Superuser home
+      log_in: Log in
+      sign_up: Sign up
+      your_bikes: Your bikes
+      your_preferences: Your preferences
+      preferences: Preferences
+      log_out: Log out
