--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,7 +12,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    -
+    - 
     - Jan
     - Feb
     - Mar
@@ -38,7 +38,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    -
+    - 
     - January
     - February
     - March
@@ -574,3 +574,10 @@ en:
       your_preferences: Your preferences
       preferences: Preferences
       log_out: Log out
+    period_select:
+      last_hour: last hour
+      last_day: last day
+      last_7_days: last 7 days
+      last_30_days: last 30 days
+      last_year: last year
+      all: All
