--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -417,26 +417,43 @@ en:
       year: year
     campus_packages:
       year: year
+      keep_us_pedaling: Keep us pedaling
+      number_of_members: "%{range} Members"
+      package_title: "%{name} package"
+      bike_index_for_colleges_universities: Bike Index for Colleges & Universities
+      clean_up_your_campus_messy_registry: Clean up your Campus's messy registry.
+      all_plans_come_with_a_30day_free_trial: All plans come with a 30-day free trial
+      compare_plans_and_features: Compare Plans and Features
+      free: Free
+      forever: Forever
+      sign_up_now: Sign Up Now
+      try_for_free: Try For Free
+      questions_want_to_get_started: Questions? Want to get started?
+      contact_us: Contact us
+      contact_us_for_trial: Contact us for a free trial
+      choose_a_package_size: Choose a package size
+      additional: Additional
+      sign_up: Sign up
   plan_features:
-      supporting_our_nonprofit: Supporting our nonprofit
-      create_organization_account: Create organization account and contact registrants
-      embed_a_registration_form: Embed a registration form on your website so people can register in your organization account
-      automatic_registration_through_pos: Automatic registration through your POS
-      social_media_and_email_marketing: Social Media and Email marketing campaign assets
-      search_bikes_in_organization: Search bikes in organization account
-      import_csv_file: Import CSV file of registrations from former system
-      welcome_campaign: Welcome campaign on Facebook, Twitter, and Instagram
-      staff_accounts: Staff accounts
-      landing_page: Branded registration landing page
-      qr_sticker: QR sticker scanning and messaging
-      ongoing_programming: Ongoing programming, hosting, and support
-      contact_registrants: Contact registrants who have not finished registration
-      add_logos: Add logos and text to Bike Index emails
-      export_custom_data: Export custom data into CSV/XLSX files
-      add_form_fields: Add specific form fields to your landing page
-      automated_migration: Automated migration of graduated bikes out of system
-      mailing_stickers: Avery mailing address formatted XLS export for mailing stickers
-      nest_organizations: Nest multiple organizations in one
+    supporting_our_nonprofit: Supporting our nonprofit
+    create_organization_account: Create organization account and contact registrants
+    embed_a_registration_form: Embed a registration form on your website so people can register in your organization account
+    automatic_registration_through_pos: Automatic registration through your POS
+    social_media_and_email_marketing: Social Media and Email marketing campaign assets
+    search_bikes_in_organization: Search bikes in organization account
+    import_csv_file: Import CSV file of registrations from former system
+    welcome_campaign: Welcome campaign on Facebook, Twitter, and Instagram
+    staff_accounts: Staff accounts
+    landing_page: Branded registration landing page
+    qr_sticker: QR sticker scanning and messaging
+    ongoing_programming: Ongoing programming, hosting, and support
+    contact_registrants: Contact registrants who have not finished registration
+    add_logos: Add logos and text to Bike Index emails
+    export_custom_data: Export custom data into CSV/XLSX files
+    add_form_fields: Add specific form fields to your landing page
+    automated_migration: Automated migration of graduated bikes out of system
+    mailing_stickers: Avery mailing address formatted XLS export for mailing stickers
+    nest_organizations: Nest multiple organizations in one
   layouts:
     revised_messages:
       error: error
